# vllm-omni

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  setup.py
.buildkite/: bootstrap-amd-omni.sh  bootstrap-intel-omni.sh  nightly-release-pipeline.yaml  pipeline-intel.yaml  pipeline-npu-a3.yaml  pipeline-npu.yaml  pipeline.yml  release-pipeline.yaml  test-amd-merge.yml  test-amd-ready.yaml  test-amd.yaml  test-merge.yml  test-nightly-diffusion.yml  test-nightly.yaml  test-nightly.yml  test-npu-nightly.yaml  test-ready.yml  test-template-amd-omni.j2  test-weekly.yml
.buildkite/scripts/: generate-and-upload-nightly-index.sh  generate-nightly-index.py  simple_test.sh  upload-nightly-wheels.sh  upload_pipeline_with_skip_ci.sh
.claude/skills/: readme.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  mergify.yml
.github/ISSUE_TEMPLATE/: 750-RFC.yml
.github/workflows/: build_wheel.yml  comfyui-publish.yml  comfyui-validate.yml  pr-reviewer.yml  pre-commit.yml
apps/ComfyUI-vLLM-Omni/: .gitignore  LICENSE  README.md  __init__.py
benchmarks/: README.md  __init__.py
benchmarks/accuracy/: README.md  __init__.py  common.py
benchmarks/build_dataset/: download_process_data_seedtts.md
benchmarks/diffusion/: README.md  backends.py  diffusion_benchmark_serving.py  quantization_quality.py
benchmarks/fish-speech/: bench_speaker_cache.py  bench_voice_cache.py  fish_bench_utils.py
benchmarks/glm_image/: README.md  benchmark_glm_image.py
benchmarks/qwen3-omni/: README.md
benchmarks/qwen3-tts/: README.md  plot_results.py  run_benchmark.sh
benchmarks/tts/: README.md  bench_tts.py  bench_voxcpm_offline.py  model_configs.yaml  plot_results.py
docker/: Dockerfile.ci  Dockerfile.cuda  Dockerfile.npu  Dockerfile.npu.a3  Dockerfile.npu.ci  Dockerfile.npu.ci.a3  Dockerfile.rocm  Dockerfile.xpu
docs/: .nav.yml  README.md
docs/api/: README.md
docs/cli/: README.md  serve.md
docs/community/: governance.md
docs/configuration/: README.md  pd_disaggregation.md  stage_configs.md
docs/contributing/: README.md  metrics.md  profiling.md
docs/design/: architecture_overview.md  index.md  qwen3_omni_tts_performance_optimization.md
docs/features/: comfyui.md  custom_pipeline.md  sleep_mode.md
docs/getting_started/: quickstart.md
docs/models/: supported_models.md
docs/serving/: audio_generate_api.md  diffusion_chat_api.md  image_edit_api.md  speech_api.md  video_stream_api.md
docs/usage/: faq.md
docs/user_guide/: diffusion_acceleration.md  diffusion_features.md  feature_compatibility.md
examples/online_serving/: openai_chat_completion_client_for_multimodal_generation.py
recipes/: README.md  TEMPLATE.md
recipes/Baidu/: ERNIE-Image.md
recipes/LTX/: LTX-2.3.md  LTX-2.md
recipes/Qwen/: Qwen-Image.md  Qwen3-Omni.md  Qwen3-TTS.md
recipes/SenseNova/: SenseNova-U1.md
recipes/Tencent/: Covo-Audio-Chat.md
recipes/Tencent-Hunyuan/: HunyuanImage-3.0-Instruct.md
recipes/Wan-AI/: Wan2.2-I2V.md  Wan2.2-S2V.md
recipes/audiox/: AudioX.md
recipes/fishaudio/: Fish-Speech-S2-Pro.md
recipes/inclusionAI/: Ming-flash-omni-2.0.md
requirements/: common.txt  cuda.txt  musa.txt  npu.txt  rocm.txt  xpu.txt
tests/: conftest.py  test_arg_utils.py  test_config_factory.py  test_data_entry_keys.py  test_diffusion_config_fields.py  test_diffusion_config_propagation.py  test_fish_speech_voice_cache.py  test_generate_nightly_perf_excel.py  test_generate_nightly_perf_html.py  test_outputs.py  test_speaker_cache.py  test_speaker_cache_integration.py  test_speaker_metadata_persistence.py  test_version.py  test_voice_cache.py  utils.py
tests/benchmarks/: conftest.py  test_accuracy_bench_utils.py  test_bench_tts_cli.py  test_diffusion_backends_metrics.py  test_seed_tts_dataset_variants.py  test_serve_cli.py
tests/comfyui/: conftest.py  test_comfyui_integration.py
tests/config/: test_pipeline_registry.py
tests/core/: test_prefix_cache.py
tests/dfx/: conftest.py
tests/diffusion/: test_data_is_moe.py  test_diffusers_loader.py  test_diffusion_engine.py  test_diffusion_engine_metrics.py  test_diffusion_engine_rpc_routing.py  test_diffusion_model_runner.py  test_diffusion_plugin_hooks.py  test_diffusion_request.py  test_diffusion_scheduler.py  test_diffusion_step_pipeline.py  test_diffusion_worker.py  test_diffusion_worker_cuda_profiler.py  test_inline_stage_diffusion_client.py  test_multiproc_engine_concurrency.py  test_multiproc_executor_concurrency.py  test_stage_diffusion_proc.py  test_worker_wrapper_base.py
tests/engine/: test_arg_utils.py  test_async_omni_engine_abort.py  test_async_omni_engine_input.py  test_async_omni_engine_outputs.py  test_async_omni_engine_stage_init.py  test_cfg_companion_tracker.py  test_cross_stage_lora.py  test_orchestrator.py  test_orchestrator_error_handling.py  test_orchestrator_kv_sender_info.py  test_output_modality.py  test_output_processor.py  test_single_stage_mode.py  test_stage_engine_core_client.py
tests/entrypoints/: test_async_omni.py  test_async_omni_abort.py  test_async_omni_diffusion.py  test_async_omni_diffusion_config.py  test_cfg_companion_tracker.py  test_omni_base_profiler.py  test_omni_diffusion.py  test_omni_entrypoints.py  test_omni_input_preprocessor.py  test_omni_llm.py  test_omni_new_request_data.py  test_omni_sleep_mode.py  test_omni_stage_diffusion_config.py  test_pd_disaggregation.py  test_realtime_connection_helpers.py  test_serve.py  test_stage_utils.py  test_utils.py
tests/examples/: conftest.py  helpers.py  test_slerp_interpolation.py
tests/helpers/: __init__.py  assertions.py  env.py  mark.py  media.py  process.py  runtime.py  stage_config.py  test_runtime_stage_cli.py
tests/inputs/: test_preprocess.py
tests/metrics/: test_stats.py
tests/model_executor/: conftest.py  helpers.py
tests/profile/: test_omni_torch_profiler.py
tests/utils/: test_audio.py
tests/worker/: test_gpu_ar_model_runner.py  test_omni_connector_mixin.py  (+3 more)
tools/: configure_stage_memory.py
vllm_omni/: __init__.py  data_entry_keys.py  outputs.py  patch.py  request.py  version.py
(+1376 files in other folders)
